--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,5 @@ Depends:
 License: GPL-3
 LazyData: true
 RoxygenNote: 6.1.0
+URL: https://github.com/hypertidy/affinething
+BugReports: https://github.com/hypertidy/affinething/issues
