--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,17 @@
-Package: affinething
-Title: Simple Georeferencing
-Version: 0.0.0.9000
+Package: affinity
+Title: Basic Tools for Raster Georeferencing, Grid Affine Transforms, and Raster Cell Abstractions
+Version: 0.1.0
 Authors@R: person("Michael D.", "Sumner", email = "mdsumner@gmail.com", role = c("aut", "cre"))
-Description: Auxiliary georeferencing.
+Description: Tools for raster georeferencing, grid affine transforms, and raster cell abstractions.
 Depends:
     R (>= 3.2.3)
 License: GPL-3
 LazyData: true
-RoxygenNote: 6.1.0
-URL: https://github.com/hypertidy/affinething
-BugReports: https://github.com/hypertidy/affinething/issues
+RoxygenNote: 6.1.1
+URL: https://github.com/hypertidy/affinity
+BugReports: https://github.com/hypertidy/affinity/issues
+Imports: 
+    raster,
+    reproj
+Suggests: 
+    covr
