--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,10 @@
 export(affinething)
 export(assignproj)
 export(domath)
+export(extent_dim_to_gt)
+export(geo_transform0)
+export(geo_world0)
+export(gt_dim_to_extent)
+export(raster_io0)
+export(rasterio_to_sfio)
+export(sfio_to_rasterio)
