--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,22 @@
 
 export(affinething)
 export(assignproj)
+export(bl)
+export(br)
 export(domath)
 export(extent_dim_to_gt)
 export(geo_transform0)
 export(geo_world0)
+export(geotransform_to_world)
 export(gt_dim_to_extent)
+export(image0)
+export(image1)
 export(raster_io0)
 export(rasterio_to_sfio)
 export(sfio_to_rasterio)
+export(text0)
+export(tl)
+export(tr)
+export(world_to_geotransform)
+importFrom(graphics,image)
+importFrom(graphics,text)
