--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: affinity
 Title: Basic Tools for Raster Georeferencing, Grid Affine Transforms, and Raster Cell Abstractions
-Version: 0.1.0.9100
+Version: 0.1.9
 Authors@R: person("Michael D.", "Sumner", email = "mdsumner@gmail.com", role = c("aut", "cre"))
 Description: Tools for raster georeferencing, grid affine transforms, and general raster logic.
 Depends:
@@ -10,6 +10,7 @@ LazyData: true
 RoxygenNote: 7.1.1
 URL: https://github.com/hypertidy/affinity
 BugReports: https://github.com/hypertidy/affinity/issues
+Encoding: UTF-8
 Imports: 
     raster,
     reproj,
