--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: affinity
 Title: Basic Tools for Raster Georeferencing, Grid Affine Transforms, and Raster Cell Abstractions
-Version: 0.1.9
+Version: 0.2.0
 Authors@R: person("Michael D.", "Sumner", email = "mdsumner@gmail.com", role = c("aut", "cre"))
 Description: Tools for raster georeferencing, grid affine transforms, and general raster logic.
 Depends:
     R (>= 3.2.3)
 License: GPL-3
 LazyData: true
+LazyDataCompression: xz
 RoxygenNote: 7.1.1
 URL: https://github.com/hypertidy/affinity
 BugReports: https://github.com/hypertidy/affinity/issues
