--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,10 @@ export(gt_dim_to_extent)
 export(image0)
 export(image1)
 export(raster_io0)
+export(raster_to_gt)
+export(raster_to_rasterio)
+export(raster_to_sfio)
+export(raster_to_world)
 export(rasterio_to_sfio)
 export(sfio_to_rasterio)
 export(text0)
