--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,20 @@
 Package: affinity
-Title: Basic Tools for Raster Georeferencing, Grid Affine Transforms, and Raster Cell Abstractions
-Version: 0.2.0
+Title: Raster Georeferencing, Grid Affine Transforms, Cell Abstraction
+Version: 0.2.5
 Authors@R: person("Michael D.", "Sumner", email = "mdsumner@gmail.com", role = c("aut", "cre"))
-Description: Tools for raster georeferencing, grid affine transforms, and general raster logic.
+Description: Tools for raster georeferencing, grid affine transforms, and general raster logic. 
+ These functions provide converters between raster specifications, world vector, geotransform, 
+ 'RasterIO' window, and 'RasterIO window' in 'sf' package list format. There are functions to offset
+ a matrix by padding any of four corners (useful for vectorizing neighbourhood operations), and
+ helper functions to harvesting user clicks on a graphics device to use for simple georeferencing
+ of images.  Methods used are available from <https://en.wikipedia.org/wiki/World_file> and
+ <https://gdal.org/user/raster_data_model.html>. 
 Depends:
     R (>= 3.2.3)
 License: GPL-3
 LazyData: true
 LazyDataCompression: xz
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 URL: https://github.com/hypertidy/affinity
 BugReports: https://github.com/hypertidy/affinity/issues
